--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -19,7 +19,7 @@
                 <br></br>
                 <br></br>
                 
-                <h:commandButton action="#{translator.createFortune()}" value="Tell my fortune"></h:commandButton>
+                <h:commandButton action="#{translator.createRandomNum()}" value="Tell my fortune"></h:commandButton>
                 <br></br>
                 <br></br>
                 
